--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
         <div>Template used: <span>0</span></div>
         <script>alert('Thanks!')</script>
         </template>
+
+        <img src="https://dotstud.io/img/blog/006/00_eyecatch.png" alt="">
     </body>
 </html>
